--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,5 +6,6 @@
     <string name="description_post_menu">Меню поста</string>
     <string name="menu_remove">Удалить</string>
     <string name="post_text">Текст поста</string>
+    <string name="empty_text_error">Tекст не может быть пустым!</string>
 
 </resources>
