Edit + правки по клавиатуре

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="description_post_author_avatar">Post author avatar</string>
     <string name="description_post_menu">Post menu</string>
     <string name="menu_remove">Remove</string>
+    <string name="menu_edit">Edit</string>
     <string name="post_text">Post text</string>
     <string name="empty_text_error">Not empty text!</string>
+
 
 
 </resources>
