fix краша + проблемы с текстом

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_edit">Edit</string>
     <string name="post_text">Post text</string>
     <string name="empty_text_error">Not empty text!</string>
-
+    <string name="_10">10</string>
 
 
 </resources>
